--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "auto-launch": "^5.0.6",
     "node-fetch": "^2.6.1",
     "ws": "^8.13.0"
   },
