--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "./dist/electron/main.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:agalwood/Motrix.git"
+    "url": "git@github.com:JokingAboutLife/Motrix.git"
   },
   "scripts": {
     "release": "npm run build --publish onTagOrDraft",
